# mirrorlens-for-splunk

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  QUICKSTART.md  README.md  README.zh.md  architecture_diagram.md  architecture_diagram.zh.md  docker-compose.yml  pyproject.toml
dashboard/backend/: pyproject.toml
dashboard/backend/src/mirrorlens_dashboard/: __init__.py  bus.py  report_generator.py  runner.py  server.py
dashboard/backend/src/mirrorlens_dashboard/routes/: __init__.py  config.py  investigate.py  report.py  snapshot.py  stream.py
dashboard/backend/tests/: test_config.py  test_demo_reset.py  test_runner_errors.py
dashboard/frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
dashboard/frontend/src/: App.tsx  main.tsx  theme.ts
dashboard/frontend/src/components/: AiActivityPanel.tsx  AiReasoningStream.tsx  CenterPanel.tsx  Header.tsx  McpCallStream.tsx  PhaseProgress.tsx
demo-video/: capture-demo.mjs  narration-brian.vtt  narration.txt
docs/: submission-copy.md  video-script.md
docs/superpowers/plans/: 2026-05-26-mirrorlens-for-splunk.md  2026-06-13-finding-card-export.md
docs/superpowers/specs/: 2026-06-13-export-pdf-report-design.md  2026-06-13-finding-card-export-design.md
examples/: sample_investigation.json
src/mirrorlens/: __init__.py  __main__.py  cli.py  config.py  ingest.py  mcp_client.py  prompts.py  react_loop.py  report.py  tools.py  utils.py  workflow.py
tests/: test_cli.py  test_dashboard_layout.py  test_docs.py  test_mcp_client.py  test_repo_skeleton.py  test_workflow.py
(+7 files in other folders)
