[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirrorlens-for-splunk"
version = "0.1.0"
description = "AI-powered security investigation via Splunk MCP Server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.20",
    "anthropic>=0.70",
    "click>=8.0",
    "rich>=13.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
mirrorlens = "mirrorlens.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mirrorlens"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires live Splunk MCP Server (deselect with '-m not integration')",
]
