[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mirrorlens-dashboard"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mirrorlens-for-splunk",
    "fpdf2>=2.7",
]

[tool.uv.sources]
mirrorlens-for-splunk = { path = "../../", editable = true }

[tool.hatch.build.targets.wheel]
packages = ["src/mirrorlens_dashboard"]
